# CUDA-math

./: CMakeLists.txt
src/: intersection.cu
test/: test_intersection.cu
